--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 body {
-  background-color:deeppink;
   font-family: 'Chakra Petch', sans-serif;
   color:azure;
   font-size: larger;
   line-height: normal;
   text-align: center;
+  background-image: url('https://media3.giphy.com/media/KH4QT4rqnnka04884l/200w.gif?cid=6c09b952b819qhr9ii89auyahkyfej7pij01x2hawngfsi5t&ep=v1_gifs_search&rid=200w.gif&ct=g');
+  background-size: cover;
+  /* height: 100vh; */
+  padding:40px;
+  margin:0;
 }
 
 h1 {
@@ -42,7 +46,8 @@ a:hover {
 }
 
 .container {
-  margin: 0px auto;
+  margin: 30px auto;
+  margin-bottom: 30px;
   width: 700px;
 }
 
